# icnow

./: .clauderules  .cursorrules  .geminirules  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  benchmark.py  benchmark_feedback.md  bin_graph.html  claudeskill.md  client_test.py  client_test.sh  db_test.rs  dummy_lines.rb  export_graph.sh  go_debug.rs  icnow_graph.html  install_claude.sh  knowledge.db  knowledge.db-journal  parse_crash.py  parse_debug.rs  patch.diff  patch_pause.diff  patch_schema.diff  patch_tools.diff  prompt_template.md  query_db.rs  query_db2.rs  replace_tools.py  run_dist.expect  scratch.py  scratch.rs  test.rb  test_concurrent.db.wal  test_concurrent_read.db.wal  test_crash.py  test_db_schema  (+17 more)
.agents/: AGENTS.md
.agents/skills/icnow/: SKILL.md
.agents/skills/icnow/references/: cypher_examples.md  tool_arsenal.md
.claude/skills/icnow/: SKILL.md
.github/workflows/: release.yml
src/: api_handlers.rs  database.rs  exporter.rs  indexer.rs  installer.rs  lib.rs  lib.rs.rej  lib.rs.rej.orig  lsif.rs  main.rs  models.rs  parser.rs  prompts.rs  reconciler.rs  resources.rs  test_gl.rs  tools.rs  tools.rs.rej  watcher.rs
src/api_handlers/: memory.rs  queries.rs  tracing.rs
src/indexer/: parser.rs  reconciler.rs  scanner.rs  watcher.rs
src/models/: edge.rs  node.rs
src/tools/: structs.rs
test_data/: go_test.go  python_test.py  react_test.tsx  ruby_test.rb  rust_test.rs
tests/: crash_test.rs  crash_test.rs.bak  mcp_test.rs  mcp_test.rs.bak  race_test.rs  race_test2.rs
