[package]
name = "icnow"
version = "0.1.22"
edition = "2024"

[lib]
name = "icnow"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
schemars = { version = "1.0" }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-typescript = "0.23.2"
notify = "8.2.0"
libc = "0.2"
rusqlite = "0.39.0"
lbug = "0.17.1"
fastembed = "5.17.2"

