[package]
name = "icnow"
version = "0.1.57"
edition = "2024"
repository = "https://github.com/leizzer/icnow"

[lib]
name = "icnow"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
schemars = { version = "1.0" }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-typescript = "0.23.2"
notify = "8.2.0"
libc = "0.2"
rusqlite = "0.39.0"
lbug = "0.18.0"
fastembed = "5.17.2"
walkdir = "2.5.0"
urlencoding = "2.1.3"
openssl = { version = "0.10", features = ["vendored"] }
dirs = "6.0.0"
tree-sitter-python = "0.23.4"
tree-sitter-go = "0.23.4"


[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.17.0"
rust-toolchain-version = "1.88.0"
ci = ["github"]
installers = ["shell", "powershell"]
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
pr-run-mode = "plan"
allow-dirty = ["ci"]
windows-archive = ".tar.gz"
unix-archive = ".tar.gz"
